@@ -1,71 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE TS><TS version="1.1">
+<!DOCTYPE TS>
+<TS version="2.0" language="fr">
 <context>
     <name>ArpWidget</name>
     <message>
         <location filename="../arpwidget.cpp" line="37"/>
         <source>Input</source>
-        <translation type="unfinished"></translation>
+        <translation>Entrée</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="39"/>
         <source>&amp;Chan</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Canal</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="51"/>
         <source>&amp;Note</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="70"/>
         <source>&amp;Vel</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Vél</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="100"/>
         <source>Output</source>
-        <translation type="unfinished"></translation>
+        <translation>Sortie</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="102"/>
         <source>C&amp;han</source>
-        <translation type="unfinished"></translation>
+        <translation>C&amp;anal</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="115"/>
         <source>&amp;Port</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="149"/>
         <source>Pattern</source>
-        <translation type="unfinished"></translation>
+        <translation>Motif</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="154"/>
         <source>&amp;Edit Pattern</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Editer Motif</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="162"/>
         <source>&amp;Remove Pattern</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Supprimer Motif</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="170"/>
         <source>&amp;Store Pattern</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Mémoriser Motif</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="180"/>
         <source>Pattern preset</source>
-        <translation type="unfinished"></translation>
+        <translation>Preset motif</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="189"/>
         <source>Arp through chord</source>
-        <translation type="unfinished"></translation>
+        <translation>Arpège dans accord</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="216"/>
@@ -74,62 +75,66 @@
  &lt; . &gt; tempo up/down
  d h note length up/down
  / velocity up/down</source>
-        <translation type="unfinished"></translation>
+        <translation>( ) mode accord act/désact
++ - octave sup/inf
+&lt; ; &gt; accel/décel
+d h durée de note augm/dim
+/ \\ vél augm/dim</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="237"/>
         <source>&amp;Random settings</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Contrôles randomisation</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="244"/>
         <source>Random</source>
-        <translation type="unfinished"></translation>
+        <translation>Randomisation</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="249"/>
         <source>&amp;Shift</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Décalage</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="261"/>
         <source>Vel&amp;ocity</source>
-        <translation type="unfinished"></translation>
+        <translation>Vél&amp;ocité</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="273"/>
         <source>&amp;Length</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Durée</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="461"/>
         <source>Could not write to resource file</source>
-        <translation type="unfinished"></translation>
+        <translation>Erreur d&apos;écriture du fichier ressources</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="482"/>
         <source>Could not read from resource file</source>
-        <translation type="unfinished"></translation>
+        <translation>Erreur de lecture du fichier ressources</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="517"/>
         <source>%1: Store pattern</source>
-        <translation type="unfinished"></translation>
+        <translation>%1: Mémoriser motif</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="518"/>
         <source>New pattern</source>
-        <translation type="unfinished"></translation>
+        <translation>Nouveau motif</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="518"/>
         <source>Arp pattern</source>
-        <translation type="unfinished"></translation>
+        <translation>Motif d&apos;arpège</translation>
     </message>
     <message>
         <location filename="../arpwidget.cpp" line="539"/>
         <source>Remove &quot;%1&quot;?</source>
-        <translation type="unfinished"></translation>
+        <translation>Supprimer &quot;%1&quot;?</translation>
     </message>
 </context>
 <context>
@@ -137,17 +142,17 @@
     <message>
         <location filename="../groovewidget.cpp" line="22"/>
         <source>Groove &amp;shift</source>
-        <translation type="unfinished"></translation>
+        <translation>Groove &amp;décalage</translation>
     </message>
     <message>
         <location filename="../groovewidget.cpp" line="33"/>
         <source>Groove &amp;velocity</source>
-        <translation type="unfinished"></translation>
+        <translation>Groove &amp;vélocité</translation>
     </message>
     <message>
         <location filename="../groovewidget.cpp" line="44"/>
         <source>Groove &amp;length</source>
-        <translation type="unfinished"></translation>
+        <translation>Groove &amp;durée</translation>
     </message>
 </context>
 <context>
@@ -155,87 +160,87 @@
     <message>
         <location filename="../gui.cpp" line="43"/>
         <source>Event Log</source>
-        <translation type="unfinished"></translation>
+        <translation>Journal</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="61"/>
         <source>Settings</source>
-        <translation type="unfinished"></translation>
+        <translation>Paramètres</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="70"/>
         <source>Groove</source>
-        <translation type="unfinished"></translation>
+        <translation>Groove</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="75"/>
         <source>&amp;Add Arp</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Ajouter Arpège</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="80"/>
         <source>&amp;Rename Arp</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Renommer Arpège</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="86"/>
         <source>&amp;Remove Arp</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Supprimer Arpège</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="92"/>
         <source>&amp;Run</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Start/Stop</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="130"/>
         <source>About %1...</source>
-        <translation type="unfinished"></translation>
+        <translation>A propos de %1...</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="177"/>
         <source>QMidiArp: Rename Arp</source>
-        <translation type="unfinished"></translation>
+        <translation>QMidiArp: Renommer Arpège</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="178"/>
         <source>New Name</source>
-        <translation type="unfinished"></translation>
+        <translation>Nouveau nom</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="196"/>
         <source>Remove &quot;%1&quot;?</source>
-        <translation type="unfinished"></translation>
+        <translation>Supprimer &quot;%1&quot;?</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="293"/>
         <source>QMidiArp files (*.qma)</source>
-        <translation type="unfinished"></translation>
+        <translation>Fichiers QMidiArp (*.qma)</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="300"/>
         <source>Could not write to file &quot;%1&quot;.</source>
-        <translation type="unfinished"></translation>
+        <translation>Erreur d&apos;écriture du fichier &quot;%1&quot;.</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="352"/>
         <source>Could not write to resource file</source>
-        <translation type="unfinished"></translation>
+        <translation>Erreur d&apos;écriture du fichier ressources</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="260"/>
         <source>Could not read from file %1.</source>
-        <translation type="unfinished"></translation>
+        <translation>Erreur de lecture du fichier %1.</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="140"/>
         <source>Add MIDI Arpeggiator</source>
-        <translation type="unfinished"></translation>
+        <translation>Ajouter Arpège MIDI</translation>
     </message>
     <message>
         <location filename="../gui.cpp" line="141"/>
         <source>Arp %1</source>
-        <translation type="unfinished"></translation>
+        <translation>Arp %1</translation>
     </message>
 </context>
 <context>
@@ -243,42 +248,42 @@
     <message>
         <location filename="../logwidget.cpp" line="27"/>
         <source>&amp;Enable Log</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Activer Journal</translation>
     </message>
     <message>
         <location filename="../logwidget.cpp" line="33"/>
         <source>Log &amp;MIDI Clock</source>
-        <translation type="unfinished"></translation>
+        <translation>Rapporter &amp;MIDI Clock</translation>
     </message>
     <message>
         <location filename="../logwidget.cpp" line="38"/>
         <source>&amp;Clear</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Vider</translation>
     </message>
     <message>
         <location filename="../logwidget.cpp" line="93"/>
         <source>MIDI Clock</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../logwidget.cpp" line="98"/>
         <source>MIDI Start (Transport)</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../logwidget.cpp" line="102"/>
         <source>MIDI Continue (Transport)</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../logwidget.cpp" line="106"/>
         <source>MIDI Stop (Transport)</source>
-        <translation type="unfinished"></translation>
+        <translation></translation>
     </message>
     <message>
         <location filename="../logwidget.cpp" line="110"/>
         <source>Unknown event type</source>
-        <translation type="unfinished"></translation>
+        <translation>Evênement inconnu</translation>
     </message>
 </context>
 <context>
@@ -286,22 +291,22 @@
     <message>
         <location filename="../passwidget.cpp" line="16"/>
         <source>&amp;Discard unmatched events</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Rejeter évênements non-traîtés</translation>
     </message>
     <message>
         <location filename="../passwidget.cpp" line="22"/>
         <source>&amp;Send unmatched events to port</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Envoyer évênements non-traités au port</translation>
     </message>
     <message>
         <location filename="../passwidget.cpp" line="33"/>
         <source>MIDI &amp;Clock rate (tpb)</source>
-        <translation type="unfinished"></translation>
+        <translation>Cadence MIDI &amp;Clock (tpb)</translation>
     </message>
     <message>
         <location filename="../passwidget.cpp" line="47"/>
         <source>&amp;Use incoming MIDI Clock</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Utiliser MIDI Clock entrant</translation>
     </message>
 </context>
 <context>
@@ -309,32 +314,32 @@
     <message>
         <location filename="../main.cpp" line="84"/>
         <source>&amp;File</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Ficher</translation>
     </message>
     <message>
         <location filename="../main.cpp" line="85"/>
         <source>&amp;About</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;A propos</translation>
     </message>
     <message>
         <location filename="../main.cpp" line="87"/>
         <source>&amp;Open...</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Ouvrir...</translation>
     </message>
     <message>
         <location filename="../main.cpp" line="88"/>
         <source>&amp;Save</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Enregistrer</translation>
     </message>
     <message>
         <location filename="../main.cpp" line="89"/>
         <source>&amp;Quit</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;Quitter</translation>
     </message>
     <message>
         <location filename="../main.cpp" line="90"/>
         <source>&amp;About %1...</source>
-        <translation type="unfinished"></translation>
+        <translation>&amp;A propos de %1...</translation>
     </message>
 </context>
 </TS>
